<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StandardGrapherActivity">

    <!--
the purpose of this linear layout is to intercept the auto focus
-->
    <LinearLayout android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px" >
        <requestFocus />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/standardPopUpContainer"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/keyboardview1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/standardPopUpLabel"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="x="
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/standardPopUpEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/standardPopUpLabel"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/yEqualsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/standard_y_equals_label"
        app:layout_constraintBottom_toBottomOf="@+id/formulaEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/formulaEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="textNoSuggestions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/yEqualsTextView" />

    <com.example.differential_equation_grapher.Views.WorldView
        android:id="@+id/standardWorldView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/formulaEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/integrationButton" />

    <Button
        android:id="@+id/xEvalluateButton"
        android:layout_width="0dp"
        android:minWidth="30dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="#808080"
        android:onClick="useXEvaluator"
        android:text="@string/standard_evaluator_button"
        app:layout_constraintStart_toEndOf="@+id/cameraButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/derivativeButton"
        android:layout_width="0dp"
        android:minWidth="30dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="#808080"
        android:onClick="useDerivativeEvaluator"
        android:text="@string/standard_derivative_button"
        app:layout_constraintStart_toEndOf="@+id/xEvalluateButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/integrationButton"
        android:layout_width="0dp"
        android:minWidth="30dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="#808080"
        android:onClick="useIntegratorEvaluator"
        android:text="@string/standard_integration_button"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/derivativeButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/newtonsMethodButton"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="8dp"
        android:background="#808080"
        android:minWidth="20dp"
        android:onClick="useYEvaluator"
        android:text="@string/standard_newtons_method_button"
        android:textSize="8sp"
        app:layout_constraintStart_toEndOf="@+id/integrationButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/minMaxFinderButton"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="#808080"
        android:minWidth="20dp"
        android:onClick="useMinMax"
        android:text="@string/standard_min_max_button"
        android:textSize="8sp"
        app:layout_constraintStart_toEndOf="@+id/newtonsMethodButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cameraButton"
        android:layout_width="wrap_content"
        android:minWidth="20dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="#404040"
        android:onClick="useCameraMover"
        android:text="@string/standard_camera_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.inputmethodservice.KeyboardView
        android:id="@+id/keyboardview1"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:background="#00FFFFFF"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/formulaEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/standardLengthButton"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="#808080"
        android:minWidth="20dp"
        android:onClick="useLengthFinder"
        android:text="@string/standard_length_button"
        app:layout_constraintStart_toEndOf="@+id/minMaxFinderButton"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>