<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PolarGrapherActivity">

    <!--
the purpose of this linear layout is to intercept the auto focus
-->
    <LinearLayout android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px" >
        <requestFocus />
    </LinearLayout>

    <Button
        android:id="@+id/polarCameraButton"
        android:layout_width="wrap_content"
        android:minWidth="20dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="#404040"
        android:onClick="useCameraMover"
        android:text="@string/polar_camera_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.differential_equation_grapher.Views.WorldView
        android:id="@+id/polarWorldView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/polarEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/polarCameraButton" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/polar_f_of_theta_label"
        app:layout_constraintBottom_toBottomOf="@+id/polarEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/polar_t_start_label"
        app:layout_constraintBottom_toBottomOf="@+id/thetaStartEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/polar_t_end_label"
        app:layout_constraintBottom_toBottomOf="@+id/thetaEndEditText"
        app:layout_constraintStart_toEndOf="@+id/thetaStartEditText" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/polar_number_of_steps_label"
        app:layout_constraintBottom_toBottomOf="@+id/numberOfStepsEditText"
        app:layout_constraintStart_toEndOf="@+id/thetaEndEditText" />

    <EditText
        android:id="@+id/polarEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:text="\u03B8"
        app:layout_constraintBottom_toTopOf="@+id/thetaStartEditText"
        app:layout_constraintStart_toEndOf="@+id/textView5" />

    <EditText
        android:id="@+id/thetaStartEditText"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6" />

    <EditText
        android:id="@+id/thetaEndEditText"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:text="2\u03C0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7" />

    <EditText
        android:id="@+id/numberOfStepsEditText"
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:text="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8" />

    <Button
        android:id="@+id/polarEvaluateButton"
        android:layout_width="wrap_content"
        android:minWidth="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="#808080"
        android:onClick="usePolarEvaluator"
        android:text="@string/polar_evaluator_button"
        app:layout_constraintStart_toEndOf="@+id/polarCameraButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/gridSwapperButton"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:minWidth="20dp"
        android:onClick="swapGrids"
        android:text="@string/polar_swap_grids_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.inputmethodservice.KeyboardView
        android:id="@+id/polarKeyboardview"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:background="#00FFFFFF"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/polarEditText"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/polarPopUpContainer"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/polarKeyboardview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        tools:layout_editor_absoluteY="272dp">

        <TextView
            android:id="@+id/polarPopUpLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/polarPopUpEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/polarPopUpLabel"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/polarIntegrationButton"
        android:layout_width="wrap_content"
        android:minWidth="30dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="#808080"
        android:onClick="usePolarIntegrator"
        android:text="@string/polar_integrator_button"
        app:layout_constraintStart_toEndOf="@+id/polarEvaluateButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/polarLengthButton"
        android:layout_width="wrap_content"
        android:minWidth="20dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="#808080"
        android:onClick="usePolarLengthFinder"
        android:text="@string/polar_length_button"
        app:layout_constraintStart_toEndOf="@+id/polarIntegrationButton"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>