<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThreeDGrapherActivity">

    <!--
the purpose of this linear layout is to intercept the auto focus
-->
    <LinearLayout android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px" >
        <requestFocus />
    </LinearLayout>

    <Button
        android:id="@+id/threeDCameraButton"
        android:layout_width="wrap_content"
        android:minWidth="20dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="#404040"
        android:onClick="useCameraMover"
        android:text="@string/three_d_camera_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/threeDEvaluateButton"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="#808080"
        android:onClick="use3DEvaluator"
        android:minWidth="20dp"
        android:text="@string/three_d_evaluate_button"
        app:layout_constraintStart_toEndOf="@+id/threeDCameraButton"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.differential_equation_grapher.Views.WorldView
        android:id="@+id/threeDWorldView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/threeDFormulaEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/threeDCameraButton" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/three_d_f_of_z_label"
        app:layout_constraintBottom_toBottomOf="@+id/threeDFormulaEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/threeDFormulaEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/threeDMinEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <android.inputmethodservice.KeyboardView
        android:id="@+id/threeDkeyboardview"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:background="#00FFFFFF"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/threeDFormulaEditText"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/threeDPopUpContainer"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/threeDkeyboardview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/threeDPopUpLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/threeDPopUpEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/threeDPopUpLabel"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/threeDMinEditText"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="-5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/three_d_min_label"
        app:layout_constraintBottom_toBottomOf="@+id/threeDMinEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/three_d_max_label"
        app:layout_constraintBottom_toBottomOf="@+id/threeDMaxEditText"
        app:layout_constraintStart_toEndOf="@+id/threeDMinEditText" />

    <EditText
        android:id="@+id/threeDMaxEditText"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView14" />

    <Button
        android:id="@+id/threeDGradientButton"
        android:layout_width="wrap_content"
        android:minWidth="20dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="#808080"
        android:onClick="use3DGradientEvaluator"
        android:text="@string/three_d_gradient_button"
        app:layout_constraintStart_toEndOf="@+id/threeDEvaluateButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/threeDMinMaxButton"
        android:layout_width="wrap_content"
        android:minWidth="20dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="#808080"
        android:onClick="use3DMaxMinFinder"
        android:text="@string/three_d_max_min_button_max_mode"
        app:layout_constraintStart_toEndOf="@+id/threeDIntegratorButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/threeDIntegratorButton"
        android:layout_width="wrap_content"
        android:minWidth="30dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="#808080"
        android:onClick="use3DIntegrator"
        android:text="@string/three_d_integrator_button"
        app:layout_constraintStart_toEndOf="@+id/threeDGradientButton"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>